feat: GetClosestLatestStationObservation
